<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_accueil"
        android:title="@string/menu_accueil"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_acces"
        android:title="@string/bouton_consulter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_deco"
        android:title="@string/menu_deco"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_outipasses"
        android:title="@string/outipasse"
        app:showAsAction="never" />


</menu>