<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_nouvelle"
        android:title="@string/menu_enregistrer"
        android:icon="@drawable/ajout"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_outipasses"
        android:title="@string/menu_outipasses"
        android:icon="@mipmap/mp_sr"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_deco"
        android:title="@string/menu_deco"
        android:icon="@android:drawable/ic_lock_idle_lock"
        app:showAsAction="ifRoom" />

</menu>