<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadnas"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:weightSum="1">

    <!-- titre -->
    <TextView
        android:id="@+id/repertoire_creation"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/repertoire_titre"
        android:textAppearance="@style/titre2" />

    <!-- Encadré du formulaire -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linearborder">

        <!-- nom repertoire -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- intitule -->
            <TextView
                android:id="@+id/rep_nom_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repertoire_nom"
                android:textAppearance="@style/texte_bleu" />
            <!-- champ saisie -->
            <EditText
                android:id="@+id/rep_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/champ"
                android:hint="@string/invite_remplir"
                android:inputType="text"
                android:textAppearance="@style/texte_bleu" />
        </LinearLayout>


        <!-- note additionnelle repertoire -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- intitule -->
            <TextView
                android:id="@+id/rep_notes_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repertoire_descript"
                android:textAppearance="@style/texte_bleu" />
            <!-- champ saisie -->
            <EditText
                android:id="@+id/rep_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/champ"
                android:hint="@string/invite_remplir"
                android:inputType="text"
                android:textAppearance="@style/texte_bleu" />
        </LinearLayout>


        <!-- Titre bouton creer -->
        <TextView
            android:id="@+id/creer_bouton_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/texte_bleu"
            android:text="@string/creation" />

        <!-- bouton creer -->
        <Button
            android:id="@+id/creer_bouton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/cadnas" />

    </LinearLayout>

</LinearLayout>